# homeassistant-skodaconnect

./: .gitignore  README.md  hacs.json  info.md  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: release.yaml  stale.yml
custom_components/myskoda/: __init__.py  binary_sensor.py  config_flow.py  const.py  lock.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/myskoda/translations/: en.json  it.json  nb.json  nl.json  nn.json  sv.json
custom_components/seatconnect/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  device_tracker.py  lock.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/seatconnect/translations/: en.json  es.json  it.json  nb.json  nn.json  pl.json  sv.json
custom_components/skodaconnect/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  device_tracker.py  lock.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/skodaconnect/skoda/: README.md  __init__.py  dashboardskoda.py  requirements.txt  setup.cfg  setup.py  skoda.py  utilities.py
custom_components/skodaconnect/skoda/tests/: dummy_test.py
custom_components/skodaconnect/translations/: de.json  en.json  it.json  nb.json  nl.json  pl.json  ru.json  sk.json  sv.json
