[metadata]
description-file = README.md

[flake8]
ignore =
    I201,
    W503,
    CFQ001,
    CFQ002

filename =
    dashboard.py
    skoda.py

exclude =
    .git,
    __pycache__,
    *.txt,
    *.md,
    *.cfg

max_line_length = 127
count = True
inline_quotes = single

#format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s

[tool:pytest]
minversion = 5.4.3
addopts = -ra -q
testpaths = tests
python_files = *_test.py
pep8maxlinelength=250
pep8ignore=* E731 \
           * E402 \